some more updates

--- a/controller/index.html
+++ b/controller/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
 <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,user-scalable=no" />
+<meta name="mobile-web-app-capable" content="yes">
 	<script src="/static/mootools.js"> </script>
 	<script src="/static/mootools_more.js"> </script>
 	<script src="/static/utils.js"> </script>
