--- a/game/index.html
+++ b/game/index.html
@@ -21,6 +21,9 @@
 						<span></span>
 					</span>					
 				</div>
+				<div class="vs">
+					vs.
+				</div>
 				<div class="player" id="player2">
 					<img src="/static/profile2.png">
 					<b class="name">Player 2</b>
@@ -40,7 +43,7 @@
 		<div id="sidebar">
 			<div id="queue">
 				<div class="header">
-					Next up!
+					Challengers
 				</div>
 				<div class="none">
 					There is nobody here!
@@ -50,8 +53,9 @@
 				</div>
 			</div>
 			<div id="qr">
-				<b>Scan me to enter</b>
+				<b>Join now!</b>
 				<div class="img"></div>
+				<span>http://joingame.com</span>
 			</div>
 		</div>
 	</body>
