--- a/controller/index.html
+++ b/controller/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-	<div class="login hidden" id='login'>
+	<div class="login" id='login'>
 	<h1>login</h1>
 	<form id="connect"> 
 	<input type="text" id="username" placeholder="Username.." value="me"></input>
@@ -28,7 +28,7 @@
 	    </div>
 	</div>
 
-	<div class="controll">
+	<div class="controll hidden">
 <canvas id="canvas"  class="canvas">
   Your browser does not support canvas element.
 </canvas>
