--- a/controller/index.html
+++ b/controller/index.html
@@ -14,15 +14,16 @@
 	<div class="login" id='login'>
 	<h1>JOIN THE GAME</h1>
 	<form id="connect"> 
+
+    <div class="upload" id='upload'>
+	<input type="file" id="file_input" name="file" capture="camera" class="custom-file-input" accept="image/*" id="cameraInput" name="cameraInput">
+    </div>
+
 	<input type="text" id="username" placeholder="Username"></input>
 	<button class="btn bottom" type="submit">JOIN</button>
+
 	</form>
 
-
-   <div class="fileUpload btn btn-primary">
-    <span>Upload</span>
-    <input type="file" id="file_input" capture="camera" accept="image/*" id="cameraInput" name="cameraInput">
-</div> 
 
 	</div>
 
