--- a/game/index.html
+++ b/game/index.html
@@ -14,12 +14,17 @@
 				<span class="name">Player 1</span>!				
 			</div>
 		</div>
+		<div id="waiting">
+			<div class="stripe">
+				Waiting for players...
+			</div>
+		</div>
 	
 		<div id="mainwindow">
 			<div id="topbar">
 				<div class="player" id="player1">
 					<img src="/static/profile-icon.png" onerror="this.src='/static/profile-icon.png';">
-					<b class="name">Player 1</b>
+					<b class="name">Waiting for player 1</b>
 					<span class="score">
 						<span></span>
 						<span></span>
@@ -33,7 +38,7 @@
 				</div>
 				<div class="player" id="player2">
 					<img src="/static/profile-icon.png" onerror="this.src='/static/profile-icon.png';">
-					<b class="name">Player 2</b>
+					<b class="name">Waiting for player 2</b>
 					<span class="score">
 						<span></span>
 						<span></span>
