--- a/controller/index.html
+++ b/controller/index.html
@@ -11,6 +11,16 @@
     </head>
 
     <body>
+	
+	<div class="won hidden" id="won">
+	  <h1> Congratulations!</h1>
+	  <h2>You won 1 Hackakin beer </h2>
+	  <img src="/static/won.png"/>
+		
+	  <h2> Sponsored by </h2>
+	  <img src="/static/won_logo.png"/>
+		
+	</div>
 	<div class="login" id='login'>
 	<h1>JOIN THE GAME</h1>
 	<form id="connect"> 
@@ -40,7 +50,7 @@
 </canvas>
 
 </div>
-
+	
 
 
     </body>
